...
    "CellMenu.Edit" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "編集"
...
    "Grid.SelectAll" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select all cells"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "すべてのセルを選択"
...
    "HeaderMenu.Column.AddAtEnd" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Column at End"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "末尾に列を追加"
...
    "HeaderMenu.Row.AddAtEnd" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Row at End"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "末尾に行を追加"
...
    "Toolbar.Bold" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bold"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "太字"
...
